[tool.poetry]
name = "cwp_pkg_search"
version = "0.1.0"
description = ""
authors = ["Charles Farquhar <cfarquhar@cfarquhar.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
